; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/emulex/benet/extr_be_main.c_do_gro.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/emulex/benet/extr_be_main.c_do_gro.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.be_rx_compl_info = type { i64, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.be_rx_compl_info*)* @do_gro to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_gro(%struct.be_rx_compl_info* %0) #0 {
  %2 = alloca %struct.be_rx_compl_info*, align 8
  store %struct.be_rx_compl_info* %0, %struct.be_rx_compl_info** %2, align 8
  %3 = load %struct.be_rx_compl_info*, %struct.be_rx_compl_info** %2, align 8
  %4 = getelementptr inbounds %struct.be_rx_compl_info, %struct.be_rx_compl_info* %3, i32 0, i32 2
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %17

7:                                                ; preds = %1
  %8 = load %struct.be_rx_compl_info*, %struct.be_rx_compl_info** %2, align 8
  %9 = getelementptr inbounds %struct.be_rx_compl_info, %struct.be_rx_compl_info* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 8
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %17, label %12

12:                                               ; preds = %7
  %13 = load %struct.be_rx_compl_info*, %struct.be_rx_compl_info** %2, align 8
  %14 = getelementptr inbounds %struct.be_rx_compl_info, %struct.be_rx_compl_info* %13, i32 0, i32 0
  %15 = load i64, i64* %14, align 8
  %16 = icmp ne i64 %15, 0
  br label %17

17:                                               ; preds = %12, %7, %1
  %18 = phi i1 [ false, %7 ], [ false, %1 ], [ %16, %12 ]
  %19 = zext i1 %18 to i64
  %20 = select i1 %18, i32 1, i32 0
  ret i32 %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
